// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text.sql > line 7 1`] = `
[
  "SELECT text 'this is a text string' = text 'this is a text strin' AS false",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "false",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 12,
                              "sval": {
                                "sval": "this is a text string",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 7,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 36,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 43,
                              "sval": {
                                "sval": "this is a text strin",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 38,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`text.sql > line 10 1`] = `
[
  "SELECT * FROM TEXT_TBL",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "text_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`text.sql > line 28 1`] = `
[
  "/*
 * various string functions
 */
select concat('one')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 42,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 49,
                            "sval": {
                              "sval": "one",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "concat",
                          },
                        },
                      ],
                      "location": 42,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`text.sql > line 44 1`] = `
[
  "select concat(variadic array[1,2,3])",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_ArrayExpr": {
                            "elements": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 29,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 2,
                                  },
                                  "location": 31,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 3,
                                  },
                                  "location": 33,
                                },
                              },
                            ],
                            "location": 23,
                          },
                        },
                      ],
                      "func_variadic": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "concat",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`text.sql > line 50 1`] = `
[
  "select concat_ws(',', variadic 10)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 17,
                            "sval": {
                              "sval": ",",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 10,
                            },
                            "location": 31,
                          },
                        },
                      ],
                      "func_variadic": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "concat_ws",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`text.sql > line 52 1`] = `
[
  "/*
 * format
 */
select format(NULL)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 24,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "isnull": true,
                            "location": 31,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "format",
                          },
                        },
                      ],
                      "location": 24,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`text.sql > line 85 1`] = `
[
  "select format('%s, %s', variadic array['Hello','World'])",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 14,
                            "sval": {
                              "sval": "%s, %s",
                            },
                          },
                        },
                        {
                          "A_ArrayExpr": {
                            "elements": [
                              {
                                "A_Const": {
                                  "location": 39,
                                  "sval": {
                                    "sval": "Hello",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 47,
                                  "sval": {
                                    "sval": "World",
                                  },
                                },
                              },
                            ],
                            "location": 33,
                          },
                        },
                      ],
                      "func_variadic": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "format",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`text.sql > line 93 1`] = `
[
  "select format('Hello', variadic NULL::int[])",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 14,
                            "sval": {
                              "sval": "Hello",
                            },
                          },
                        },
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "isnull": true,
                                "location": 32,
                              },
                            },
                            "location": 36,
                            "typeName": {
                              "arrayBounds": [
                                {
                                  "Integer": {},
                                },
                              ],
                              "location": 38,
                              "names": [
                                {
                                  "String": {
                                    "sval": "pg_catalog",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "int4",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "func_variadic": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "format",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`text.sql > line 95 1`] = `
[
  "select format(string_agg('%s',','), variadic array_agg(i))
from generate_series(1,200) g(i)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "g",
                    "colnames": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                    ],
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 80,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 200,
                                    },
                                    "location": 82,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 64,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 25,
                                  "sval": {
                                    "sval": "%s",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 30,
                                  "sval": {
                                    "sval": ",",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "string_agg",
                                },
                              },
                            ],
                            "location": 14,
                          },
                        },
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "i",
                                      },
                                    },
                                  ],
                                  "location": 55,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "array_agg",
                                },
                              },
                            ],
                            "location": 45,
                          },
                        },
                      ],
                      "func_variadic": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "format",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
